tests/paczka1/fuzzy1/92487489.err
Error in line 1: uQJhRi3Xa S55 9,9
Error in line 17: uQJhRi3Xa A296 90,66
Error in line 18: uQJhRi3Xa A296 80,6
Error in line 25: uQJhRi3Xa S55 91,2
Error in line 26: SafbybU A484 61,8
Error in line 27: 3Yt A296 75,6
Error in line 36: 3Yt A129 216,89
